# vidcap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.org
.github/workflows/: cmake-multi-platform.yml
docs/: Doxyfile  UserStories.org
src/: CMakeLists.txt  main.cpp  vidcap.cpp  vidcap.h
tests/: CMakeLists.txt  self_test.cpp  vidcap_test.cpp
